--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV_______=dev
-APP_SECRET______=e04e4ea3e3d0fcc9a2c0fb4fdf752a34
+APP_ENV=dev
+APP_SECRET=e04e4ea3e3d0fcc9a2c0fb4fdf752a34
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
